# src/routes/sku-products-routes.js
@@ -4,16 +4,16 @@ const SKUProductsController = require('../controllers/sku-products-controller');
 const ProductValidation = require('../validation/sku-product-validation');
 const IdValidation = require('../validation/id-validation');
 
-router.post('/', ProductValidation.productValidation(), SKUProductsController.createProduct);
+router.post('/create', ProductValidation.productValidation(), SKUProductsController.createProduct);
 
-router.get('/', SKUProductsController.listProducts);
+router.get('/list', SKUProductsController.listProducts);
 
-router.get('/:page', SKUProductsController.listPaginated);
+router.get('/listpaginated/:page', SKUProductsController.listPaginated);
 
 router.get('/findbyid/:id', IdValidation.validateId(), SKUProductsController.findByProductId);
 
-router.put('/:id', IdValidation.validateId(), ProductValidation.productValidation(), SKUProductsController.updateProduct);
+router.put('/update/:id', IdValidation.validateId(), ProductValidation.productValidation(), SKUProductsController.updateProduct);
 
-router.delete('/:id', IdValidation.validateId(), SKUProductsController.deleteProduct);
+router.delete('/delete/:id', IdValidation.validateId(), SKUProductsController.deleteProduct);
 
 module.exports = router;
