# src/routes/sku-routes.js
@@ -4,16 +4,16 @@ const sku = require('../controllers/sku-controller');
 const idValidation = require('../validation/id-validation');
 const SkuValidation = require('../validation/sku-validation');
 
-router.post('/', SkuValidation.skuValidation(), sku.createSku);
+router.post('/create', SkuValidation.skuValidation(), sku.createSku);
 
-router.get('/', sku.listSku);
+router.get('/list', sku.listSku);
 
-router.get('/:page', sku.listPaginated);
+router.get('/listpaginated/:page', sku.listPaginated);
 
 router.get('/findbyid/:id', idValidation.validateId(), sku.findSkuById);
 
-router.put('/:id', idValidation.validateId(), SkuValidation.skuValidation(), sku.updateSku);
+router.put('/update/:id', idValidation.validateId(), SkuValidation.skuValidation(), sku.updateSku);
 
-router.delete('/:id', idValidation.validateId(), sku.deleteSku);
+router.delete('/delete/:id', idValidation.validateId(), sku.deleteSku);
 
 module.exports = router;
