# swagger.json
@@ -242,7 +242,7 @@
         }
       }
     },
-    "/sku/create": {
+    "/skus/create": {
       "post": {
         "tags": [
           "sku"
@@ -262,7 +262,10 @@
         ],
         "responses": {
           "201": {
-            "description": "ok"
+            "description": "ok",
+            "schema": {
+              "$ref": "#/definitions/skus"
+            }
           },
           "404": {
             "description": "SKU não criada"
@@ -276,7 +279,7 @@
         }
       }
     },
-    "/sku/list": {
+    "/skus/list": {
       "get": {
         "tags": [
           "sku"
@@ -297,7 +300,7 @@
         }
       }
     },
-    "/sku/listpaginated/{page}": {
+    "/skus/listpaginated/{page}": {
       "get": {
         "tags": [
           "sku"
@@ -334,7 +337,7 @@
         }
       }
     },
-    "/sku/findbyid/{id}": {
+    "/skus/findbyid/{id}": {
       "get": {
         "tags": [
           "sku"
@@ -374,47 +377,7 @@
         }
       }
     },
-    "/sku/findbyproductid/{id}": {
-      "get": {
-        "tags": [
-          "sku"
-        ],
-        "summary": "Encontra skus pela id de produto",
-        "description": "Retorna todas as skus de um produto baseada na id do produto",
-        "operationId": "findSkuByProductId",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "type": "string",
-            "required": true
-          },
-          {
-            "in": "query",
-            "name": "sku",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Sku encontrada",
-            "schema": {
-              "$ref": "#/definitions/skus"
-            }
-          },
-          "404": {
-            "description": "Sku não encontrada"
-          },
-          "422": {
-            "description": "Erro com a id"
-          },
-          "500": {
-            "description": "Falha ao encontrar a sku"
-          }
-        }
-      }
-    },
-    "/sku/update/{id}": {
+    "/skus/update/{id}": {
       "put": {
         "tags": [
           "sku"
@@ -457,7 +420,7 @@
         }
       }
     },
-    "/sku/delete/{id}": {
+    "/skus/delete/{id}": {
       "delete": {
         "tags": [
           "sku"
